--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
             <div class="item__info">
                 <h3>Odontología</h3>
             <p>09:30 - 60 min</p>
-            <img src="" alt="">
+            <div class="item__doctor">
+            <img src="/assests/dentist-1191671_640.jpg" alt="doctora">
             <p>Dra. Molly Díaz</p>
+            </div>
             </div>
             
             <div class="item__btn"><button>Pedir Turno</button></div>
@@ -42,8 +44,11 @@
 
                 <h3>Odontología</h3>
                 <p>10:30 - 60 min</p>
-                <img src="" alt="">
+                <div class="item__doctor">
+                    <img src="/assests/doctor-2337835_640.jpg" alt="doctor">
                 <p>Dr. Erik Nest</p>
+                </div>
+                
                 </div>
                 <div class="item__btn"><button>Pedir Turno</button></div>
             </div>
